src/flutter_libsparkmobile.h

        #define FFI_PLUGIN_EXPORT __declspec(dllexport)
        #define FFI_PLUGIN_EXPORT __attribute__((visibility("default"))) __attribute__((used))
FFI_PLUGIN_EXPORT
void* getFullViewKeyFromPrivateKeyData(unsigned char* keyData, int index);
FFI_PLUGIN_EXPORT
void* deserializeFullViewKey(unsigned char* keyData, int keyDataLength);
FFI_PLUGIN_EXPORT
unsigned char* serializeFullViewKey(void* fullViewKeyVoid, int* serializedSize);
FFI_PLUGIN_EXPORT
void deleteFullViewKey(void* fullViewKey);
FFI_PLUGIN_EXPORT
const char* getAddress(unsigned char* keyData, int index, int diversifier, int isTestNet);
FFI_PLUGIN_EXPORT
const char* getAddressFromFullViewKey(void* fullViewKeyVoid, int index, int diversifier, int isTestNet);
/*
 * FFI-friendly wrapper for spark::identifyCoin.
 *
 * identifyCoin: https://github.com/firoorg/sparkmobile/blob/8bf17cd3deba6c3b0d10e89282e02936d7e71cdd/src/spark.cpp#L400
 */
//FFI_PLUGIN_EXPORT
//struct CIdentifiedCoinData identifyCoin(const unsigned char* serializedCoin, int serializedCoinLength, unsigned char* keyData, int index);

FFI_PLUGIN_EXPORT
struct AggregateCoinData* idAndRecoverCoin(
        const unsigned char* serializedCoin,
        int serializedCoinLength,
        unsigned char* keyData,
        int index,
        unsigned char* context,
        int contextLength,
        int isTestNet
);
FFI_PLUGIN_EXPORT
struct AggregateCoinData* idAndRecoverCoinByFullViewKey(
        const unsigned char* serializedCoin,
        int serializedCoinLength,
        void* fullViewKeyVoid,
        unsigned char* context,
        int contextLength,
        int isTestNet
);
/*
 * FFI-friendly wrapper for spark::createSparkMintRecipients.
 *
 * createSparkMintRecipients: https://github.com/firoorg/sparkmobile/blob/8bf17cd3deba6c3b0d10e89282e02936d7e71cdd/src/spark.cpp#L43
 */
FFI_PLUGIN_EXPORT
struct CCRecipientList* cCreateSparkMintRecipients(
        struct CMintedCoinData* outputs,
        int outputsLength,
        unsigned char* serial_context,
        int serial_contextLength,
        int generate);
/*
 * FFI-friendly wrapper for spark::createSparkSpendTransaction.
 *
 * createSparkSpendTransaction: https://github.com/firoorg/sparkmobile/blob/23099b0d9010a970ad75b9cfe05d568d634088f3/src/spark.cpp#L190
 */
FFI_PLUGIN_EXPORT
struct SparkSpendTransactionResult* cCreateSparkSpendTransaction(
        unsigned char* keyData,
        int index,
        struct CRecip* recipients, // This CRecip(ient) is not the same as a CRecipient.
        int recipientsLength,
        struct COutputRecipient* privateRecipients,
        int privateRecipientsLength,
        struct DartSpendCoinData* coins,
        int coinsLength,
        struct CCoverSetData* cover_set_data_all,
        int cover_set_data_allLength,
        struct BlockHashAndId* idAndBlockHashes,
        int idAndBlockHashesLength,
        unsigned char* txHashSig,
        int additionalTxSize,
        int spendVersion,
        const unsigned char* extensionCommitment
);
FFI_PLUGIN_EXPORT
struct SerializedMintContextResult* serializeMintContext(
        struct DartInputData* inputs,
        int inputsLength
);
FFI_PLUGIN_EXPORT
struct ValidateAddressResult* isValidSparkAddress(
        const char* addressCStr,
        int isTestNet
);
FFI_PLUGIN_EXPORT
const char* hashTags(unsigned char* tags, int tagCount);
FFI_PLUGIN_EXPORT
const char* hashTag(const char* x, const char* y);
FFI_PLUGIN_EXPORT
struct SparkFeeResult* estimateSparkFee(
        unsigned char* keyData,
        int index,
        int64_t sendAmount,
        int subtractFeeFromAmount,
        struct DartSpendCoinData* coins,
        int coinsLength,
        int privateRecipientsLength,
        int utxoNum,
        int additionalTxSize,
        int spendVersion
);
FFI_PLUGIN_EXPORT
struct SparkNameScript* createSparkNameScript(
        int sparkNameValidityBlocks,
        const char* name,
        const char* additionalInfo,
        const unsigned char* ownershipDigest,
        int spendVersion,
        unsigned char* spendKeyData,
        int spendKeyIndex,
        int diversifier,
        int isTestNet,
        int hashFailSafe,
        int withoutProof
);
FFI_PLUGIN_EXPORT
struct SparkAddressOwnershipProofResult* createSparkAddressOwnershipProof(
        const unsigned char* message,
        int messageLength,
        unsigned char* spendKeyData,
        int spendKeyIndex,
        int diversifier
);
FFI_PLUGIN_EXPORT
struct SparkNameCommitmentResult* cGetSparkNameCommitment(
        const unsigned char* serializedSparkNameData,
        int serializedSparkNameDataLength
);
FFI_PLUGIN_EXPORT
void native_free(void* ptr);