lib/src/flutter_libsparkmobile_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

@ffi.Native<
        ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.UnsignedChar>, ffi.Int)>(
    symbol: 'getFullViewKeyFromPrivateKeyData')
external ffi.Pointer<ffi.Void> native_getFullViewKeyFromPrivateKeyData(
  ffi.Pointer<ffi.UnsignedChar> keyData,
  int index,
);

@ffi.Native<
        ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.UnsignedChar>, ffi.Int)>(
    symbol: 'deserializeFullViewKey')
external ffi.Pointer<ffi.Void> native_deserializeFullViewKey(
  ffi.Pointer<ffi.UnsignedChar> keyData,
  int keyDataLength,
);

@ffi.Native<
    ffi.Pointer<ffi.UnsignedChar> Function(ffi.Pointer<ffi.Void>,
        ffi.Pointer<ffi.Int>)>(symbol: 'serializeFullViewKey')
external ffi.Pointer<ffi.UnsignedChar> native_serializeFullViewKey(
  ffi.Pointer<ffi.Void> fullViewKeyVoid,
  ffi.Pointer<ffi.Int> serializedSize,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>(
    symbol: 'deleteFullViewKey')
external void native_deleteFullViewKey(
  ffi.Pointer<ffi.Void> fullViewKey,
);

@ffi.Native<
    ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.UnsignedChar>, ffi.Int,
        ffi.Int, ffi.Int)>(symbol: 'getAddress')
external ffi.Pointer<ffi.Char> native_getAddress(
  ffi.Pointer<ffi.UnsignedChar> keyData,
  int index,
  int diversifier,
  int isTestNet,
);

@ffi.Native<
    ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>, ffi.Int, ffi.Int,
        ffi.Int)>(symbol: 'getAddressFromFullViewKey')
external ffi.Pointer<ffi.Char> native_getAddressFromFullViewKey(
  ffi.Pointer<ffi.Void> fullViewKeyVoid,
  int index,
  int diversifier,
  int isTestNet,
);

/// FFI-friendly wrapper for spark::identifyCoin.
///
/// identifyCoin: https://github.com/firoorg/sparkmobile/blob/8bf17cd3deba6c3b0d10e89282e02936d7e71cdd/src/spark.cpp#L400
/// /
/// //FFI_PLUGIN_EXPORT
/// //struct CIdentifiedCoinData identifyCoin(const unsigned char* serializedCoin, int serializedCoinLength, unsigned char* keyData, int index);
@ffi.Native<
    ffi.Pointer<AggregateCoinData> Function(
        ffi.Pointer<ffi.UnsignedChar>,
        ffi.Int,
        ffi.Pointer<ffi.UnsignedChar>,
        ffi.Int,
        ffi.Pointer<ffi.UnsignedChar>,
        ffi.Int,
        ffi.Int)>(symbol: 'idAndRecoverCoin')
external ffi.Pointer<AggregateCoinData> native_idAndRecoverCoin(
  ffi.Pointer<ffi.UnsignedChar> serializedCoin,
  int serializedCoinLength,
  ffi.Pointer<ffi.UnsignedChar> keyData,
  int index,
  ffi.Pointer<ffi.UnsignedChar> context,
  int contextLength,
  int isTestNet,
);

@ffi.Native<
    ffi.Pointer<AggregateCoinData> Function(
        ffi.Pointer<ffi.UnsignedChar>,
        ffi.Int,
        ffi.Pointer<ffi.Void>,
        ffi.Pointer<ffi.UnsignedChar>,
        ffi.Int,
        ffi.Int)>(symbol: 'idAndRecoverCoinByFullViewKey')
external ffi.Pointer<AggregateCoinData> native_idAndRecoverCoinByFullViewKey(
  ffi.Pointer<ffi.UnsignedChar> serializedCoin,
  int serializedCoinLength,
  ffi.Pointer<ffi.Void> fullViewKeyVoid,
  ffi.Pointer<ffi.UnsignedChar> context,
  int contextLength,
  int isTestNet,
);

/// FFI-friendly wrapper for spark::createSparkMintRecipients.
///
/// createSparkMintRecipients: https://github.com/firoorg/sparkmobile/blob/8bf17cd3deba6c3b0d10e89282e02936d7e71cdd/src/spark.cpp#L43
@ffi.Native<
    ffi.Pointer<CCRecipientList> Function(
        ffi.Pointer<CMintedCoinData>,
        ffi.Int,
        ffi.Pointer<ffi.UnsignedChar>,
        ffi.Int,
        ffi.Int)>(symbol: 'cCreateSparkMintRecipients')
external ffi.Pointer<CCRecipientList> native_cCreateSparkMintRecipients(
  ffi.Pointer<CMintedCoinData> outputs,
  int outputsLength,
  ffi.Pointer<ffi.UnsignedChar> serial_context,
  int serial_contextLength,
  int generate,
);

/// FFI-friendly wrapper for spark::createSparkSpendTransaction.
///
/// createSparkSpendTransaction: https://github.com/firoorg/sparkmobile/blob/23099b0d9010a970ad75b9cfe05d568d634088f3/src/spark.cpp#L190
@ffi.Native<
    ffi.Pointer<SparkSpendTransactionResult> Function(
        ffi.Pointer<ffi.UnsignedChar>,
        ffi.Int,
        ffi.Pointer<CRecip>,
        ffi.Int,
        ffi.Pointer<COutputRecipient>,
        ffi.Int,
        ffi.Pointer<DartSpendCoinData>,
        ffi.Int,
        ffi.Pointer<CCoverSetData>,
        ffi.Int,
        ffi.Pointer<BlockHashAndId>,
        ffi.Int,
        ffi.Pointer<ffi.UnsignedChar>,
        ffi.Int,
        ffi.Int,
        ffi.Pointer<ffi.UnsignedChar>)>(symbol: 'cCreateSparkSpendTransaction')
external ffi.Pointer<SparkSpendTransactionResult>
    native_cCreateSparkSpendTransaction(
  ffi.Pointer<ffi.UnsignedChar> keyData,
  int index,
  ffi.Pointer<CRecip> recipients,
  int recipientsLength,
  ffi.Pointer<COutputRecipient> privateRecipients,
  int privateRecipientsLength,
  ffi.Pointer<DartSpendCoinData> coins,
  int coinsLength,
  ffi.Pointer<CCoverSetData> cover_set_data_all,
  int cover_set_data_allLength,
  ffi.Pointer<BlockHashAndId> idAndBlockHashes,
  int idAndBlockHashesLength,
  ffi.Pointer<ffi.UnsignedChar> txHashSig,
  int additionalTxSize,
  int spendVersion,
  ffi.Pointer<ffi.UnsignedChar> extensionCommitment,
);

@ffi.Native<
    ffi.Pointer<SerializedMintContextResult> Function(
        ffi.Pointer<DartInputData>, ffi.Int)>(symbol: 'serializeMintContext')
external ffi.Pointer<SerializedMintContextResult> native_serializeMintContext(
  ffi.Pointer<DartInputData> inputs,
  int inputsLength,
);

@ffi.Native<
    ffi.Pointer<ValidateAddressResult> Function(
        ffi.Pointer<ffi.Char>, ffi.Int)>(symbol: 'isValidSparkAddress')
external ffi.Pointer<ValidateAddressResult> native_isValidSparkAddress(
  ffi.Pointer<ffi.Char> addressCStr,
  int isTestNet,
);

@ffi.Native<
    ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.UnsignedChar>, ffi.Int)>(symbol: 'hashTags')
external ffi.Pointer<ffi.Char> native_hashTags(
  ffi.Pointer<ffi.UnsignedChar> tags,
  int tagCount,
);

@ffi.Native<
    ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>(symbol: 'hashTag')
external ffi.Pointer<ffi.Char> native_hashTag(
  ffi.Pointer<ffi.Char> x,
  ffi.Pointer<ffi.Char> y,
);

@ffi.Native<
    ffi.Pointer<SparkFeeResult> Function(
        ffi.Pointer<ffi.UnsignedChar>,
        ffi.Int,
        ffi.Int64,
        ffi.Int,
        ffi.Pointer<DartSpendCoinData>,
        ffi.Int,
        ffi.Int,
        ffi.Int,
        ffi.Int,
        ffi.Int)>(symbol: 'estimateSparkFee')
external ffi.Pointer<SparkFeeResult> native_estimateSparkFee(
  ffi.Pointer<ffi.UnsignedChar> keyData,
  int index,
  int sendAmount,
  int subtractFeeFromAmount,
  ffi.Pointer<DartSpendCoinData> coins,
  int coinsLength,
  int privateRecipientsLength,
  int utxoNum,
  int additionalTxSize,
  int spendVersion,
);

@ffi.Native<
    ffi.Pointer<SparkNameScript> Function(
        ffi.Int,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.UnsignedChar>,
        ffi.Int,
        ffi.Pointer<ffi.UnsignedChar>,
        ffi.Int,
        ffi.Int,
        ffi.Int,
        ffi.Int,
        ffi.Int)>(symbol: 'createSparkNameScript')
external ffi.Pointer<SparkNameScript> native_createSparkNameScript(
  int sparkNameValidityBlocks,
  ffi.Pointer<ffi.Char> name,
  ffi.Pointer<ffi.Char> additionalInfo,
  ffi.Pointer<ffi.UnsignedChar> ownershipDigest,
  int spendVersion,
  ffi.Pointer<ffi.UnsignedChar> spendKeyData,
  int spendKeyIndex,
  int diversifier,
  int isTestNet,
  int hashFailSafe,
  int withoutProof,
);

@ffi.Native<
    ffi.Pointer<SparkAddressOwnershipProofResult> Function(
        ffi.Pointer<ffi.UnsignedChar>,
        ffi.Int,
        ffi.Pointer<ffi.UnsignedChar>,
        ffi.Int,
        ffi.Int)>(symbol: 'createSparkAddressOwnershipProof')
external ffi.Pointer<SparkAddressOwnershipProofResult>
native_createSparkAddressOwnershipProof(
  ffi.Pointer<ffi.UnsignedChar> message,
  int messageLength,
  ffi.Pointer<ffi.UnsignedChar> spendKeyData,
  int spendKeyIndex,
  int diversifier,
);

@ffi.Native<
    ffi.Pointer<SparkNameCommitmentResult> Function(
        ffi.Pointer<ffi.UnsignedChar>,
        ffi.Int)>(symbol: 'cGetSparkNameCommitment')
external ffi.Pointer<SparkNameCommitmentResult> native_cGetSparkNameCommitment(
  ffi.Pointer<ffi.UnsignedChar> serializedSparkNameData,
  int serializedSparkNameDataLength,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void native_free(
  ffi.Pointer<ffi.Void> ptr,
);

/// FFI-friendly wrapper for a spark::Coin.
///
/// Coin: https://github.com/firoorg/sparkmobile/blob/8bf17cd3deba6c3b0d10e89282e02936d7e71cdd/src/coin.h#L66
final class CCoin extends ffi.Struct {
  @ffi.Char()
  external int type;

  external ffi.Pointer<ffi.Char> kHex;

  @ffi.Int()
  external int kLength;

  external ffi.Pointer<ffi.Char> address;

  @ffi.Uint64()
  external int v;

  external ffi.Pointer<ffi.Char> memo;

  @ffi.Int()
  external int memoLength;

  external ffi.Pointer<ffi.UnsignedChar> serial_context;

  @ffi.Int()
  external int serial_contextLength;
}

/// FFI-friendly wrapper for a spark::IdentifiedCoinData.
///
/// IdentifiedCoinData: https://github.com/firoorg/sparkmobile/blob/8bf17cd3deba6c3b0d10e89282e02936d7e71cdd/src/coin.h#L19
final class CIdentifiedCoinData extends ffi.Struct {
  @ffi.Uint64()
  external int i;

  external ffi.Pointer<ffi.UnsignedChar> d;

  @ffi.Int()
  external int dLength;

  @ffi.Uint64()
  external int v;

  external ffi.Pointer<ffi.Char> kHex;

  @ffi.Int()
  external int kLength;

  external ffi.Pointer<ffi.Char> memo;

  @ffi.Int()
  external int memoLength;
}

/// FFI-friendly wrapper for a spark::CRecipient.
///
/// CRecipient: https://github.com/firoorg/sparkmobile/blob/8bf17cd3deba6c3b0d10e89282e02936d7e71cdd/include/spark.h#L27
final class CCRecipient extends ffi.Struct {
  external ffi.Pointer<ffi.UnsignedChar> pubKey;

  @ffi.Int()
  external int pubKeyLength;

  @ffi.Uint64()
  external int cAmount;

  @ffi.Int()
  external int subtractFee;
}

final class CCRecipientList extends ffi.Struct {
  external ffi.Pointer<CCRecipient> list;

  @ffi.Int()
  external int length;
}

/// FFI-friendly wrapper for a spark::MintedCoinData.
///
/// MintedCoinData: https://github.com/firoorg/sparkmobile/blob/8bf17cd3deba6c3b0d10e89282e02936d7e71cdd/src/mint_transaction.h#L12
final class CMintedCoinData extends ffi.Struct {
  external ffi.Pointer<ffi.Char> address;

  @ffi.Uint64()
  external int value;

  external ffi.Pointer<ffi.Char> memo;
}

final class PubKeyScript extends ffi.Struct {
  external ffi.Pointer<ffi.UnsignedChar> bytes;

  @ffi.Int()
  external int length;
}

/// FFI-friendly wrapper for a std::pair<CAmount, bool>.
///
/// Note this is an ambiguation of a spark::CRecipient.  This CRecip(ient) is just a wrapper for a
/// CAmount and bool pair, and is not the same as the spark::CRecipient struct above, which gets
/// wrapped for us as a CCRecipient and is unrelated to this struct.
///
/// See https://github.com/firoorg/sparkmobile/blob/23099b0d9010a970ad75b9cfe05d568d634088f3/src/spark.cpp#L190
final class CRecip extends ffi.Struct {
  @ffi.Uint64()
  external int amount;

  @ffi.Int()
  external int subtractFee;
}

/// FFI-friendly wrapper for a spark::OutputCoinData.
///
/// OutputCoinData: https://github.com/firoorg/sparkmobile/blob/8bf17cd3deba6c3b0d10e89282e02936d7e71cdd/src/spend_transaction.h#L33
final class COutputCoinData extends ffi.Struct {
  external ffi.Pointer<ffi.Char> address;

  @ffi.Int()
  external int addressLength;

  @ffi.Uint64()
  external int value;

  external ffi.Pointer<ffi.Char> memo;

  @ffi.Int()
  external int memoLength;
}
